# zigen-trainer

./: Cargo.toml  Dioxus.toml  README.md  index.html
assets/: main-dxh0e85828ac232f57.css  main-dxh204e52b6fae2ce81.css  main-dxh41c166b64a9223fe.css  main-dxh62cd7ea419621c33.css  main-dxh6e7fa172231ee29.css  main-dxh7ca44f4986911fbc.css  main-dxh7cbabaa4f87b0f4.css  main-dxh7eba246a1752f3d.css  main-dxh95a547fac3afa879.css  main-dxh97b82fe31e65c091.css  main-dxh9e8b49468b01ea.css  main-dxhb3204d768e5bee23.css  main-dxheea75f2d5c6726fe.css  main-dxhfab08478b87387d4.css  main.css  tutorial.html  zigen-trainer-dxh21c89b7dce2c79.js  zigen-trainer-dxh2edf1bd2a4884048.js  zigen-trainer-dxh37f4478e0765291.js  zigen-trainer-dxh424f7658438f5c8.js  zigen-trainer-dxh49367e7eacc87870.js  zigen-trainer-dxh4cb95f256c45125d.js  zigen-trainer-dxh51a22ac928c8e94.js  zigen-trainer-dxh57f5c883465ad9b8.js  zigen-trainer-dxh5865fb2a331cbcd6.js  zigen-trainer-dxh5a61f14b2f96404d.js  zigen-trainer-dxh672cf3556cefc39e.js  zigen-trainer-dxh68ec377fc19bebfd.js  zigen-trainer-dxh69142de05287278.js  zigen-trainer-dxh699b3475402e704e.js  zigen-trainer-dxh6a243a7268f8e5ef.js  zigen-trainer-dxh7f74bc2e39c34c37.js  zigen-trainer-dxh84f1c353aaac8b9f.js  zigen-trainer-dxh96d68d8e26b0cf37.js  zigen-trainer-dxh984c8ea12a695fb4.js  zigen-trainer-dxh98c9cc7abcbceb26.js  zigen-trainer-dxha5e46feba192cd97.js  zigen-trainer-dxha84bd6f4d4f5b8f.js  zigen-trainer-dxha8be7b86e18c8ac8.js  zigen-trainer-dxha912133f1baa14b.js  (+58 more)
src/: main.rs  scheduler.rs  scheduler_fsrs.rs  scheduler_v2.rs  scheme.rs  user_state.rs
(+20 files in other folders)
