[package]
name = "zigen-trainer"
version = "0.1.0"
authors = ["Hoe Hao Cheng <haochengho12907@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dioxus = { version = "0.7.0-rc.2", features = [] }
dioxus-logger = "0.7.0-rc.2"
# dioxus-sdk = { version = "0.7.0-alpha.1", features = ["timing"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
rand = "0.9.2"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
web-sys = { version = "0.3.81", features = ["FontFace", "FontFaceSet"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

